# ticket-machine-service-system-zadanie1

./: CMakeLists.txt  conanfile.txt
include/: CashRegister.hpp  ChangeCalculator.hpp  Server.hpp  TicketService.hpp
include/common/: models.hpp
src/client/: Client.cpp
src/server/: CashRegister.cpp  ChangeCalculator.cpp  Server.cpp  TicketService.cpp
tests/: tests.cpp
